# shadowsocks-libev

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Changes  Makefile.am  Makefile.in  README.md  README_pt_BR.md  config.h.in  config.json  configure  configure.ac  encrypt.c  local.c  local.h  server.c  server.h  shadowsocks-libev.pc.in  socks5.h  test.json  testencrypt.c
.copr/: Makefile
.github/: FUNDING.yml
.github/workflows/: build.yml
acl/: chn.acl  gfwlist.acl  local.acl  server_block_chn.acl  server_block_local.acl
cmake/: config.h.cmake  config.h.in  configure.cmake
completions/bash/: ss-local  ss-manager  ss-redir  ss-server  ss-tunnel
completions/zsh/: _ss-local  _ss-manager  _ss-redir  _ss-server  _ss-tunnel
debian/: README.Debian  changelog  config.json  control  copyright  rules  shadowsocks-libev-local@.service  shadowsocks-libev-redir@.service  shadowsocks-libev-server@.service  shadowsocks-libev-tunnel@.service  shadowsocks-libev.NEWS  shadowsocks-libev.default  shadowsocks-libev.docs  shadowsocks-libev.init  shadowsocks-libev.install  shadowsocks-libev.lintian-overrides  shadowsocks-libev.postinst  shadowsocks-libev.postrm  shadowsocks-libev.service  watch
debian/tests/: control
debian/upstream/: metadata
doc/: CMakeLists.txt  Makefile.am  Makefile.in  shadowsocks-libev.asciidoc  ss-local.asciidoc  ss-manager.asciidoc  ss-redir.asciidoc  ss-server.asciidoc  ss-tunnel.asciidoc
docker/alpine/: Dockerfile  README.md  entrypoint.sh
docker/mingw/: Dockerfile  Makefile  apt.sh  build.sh  deps.sh  make.bat  prepare.sh
docker/ubuntu/: Dockerfile
libcork/: Makefile.in
libev/: Makefile.in
libipset/: Makefile.in
libudns/: Makefile.in
m4/: sodium.m4
pytest/: test.py
rpm/: Makefile.am  genrpm.sh
rpm/SOURCES/: 0001-systemd-services.patch
rpm/SOURCES/systemd/: shadowsocks-libev-local.service  shadowsocks-libev-local@.service  shadowsocks-libev-redir@.service  shadowsocks-libev-server@.service  shadowsocks-libev-tunnel@.service  shadowsocks-libev.default  shadowsocks-libev.service
rpm/SOURCES/usr/lib/systemd/system/: ss-local.service  ss-server.service
rpm/SPECS/: shadowsocks-libev.spec.in
scripts/: build_deb.sh  deb4trusty.sh  deb4xenial.sh  iperf.sh
snap/: snapcraft.yaml
src/: CMakeLists.txt  Makefile.am  Makefile.in  acl.c  acl.h  aead.c  aead.h  android.c  cache.c  cache.h  common.h  config.h.in  crypto.c  crypto.h  encrypt.c  encrypt.h  http.c  jconf.c  jconf.h  local.c  local.h  manager.c  manager.h  netutils.c  netutils.h  obfs.h  obfs_http.c  obfs_http.h  obfs_tls.c  obfs_tls.h  plugin.c  plugin.h  ppbloom.c  ppbloom.h  protocol.h  redir.c  redir.h  resolv.c  resolv.h  server.c  (+15 more)
tests/: aes-ctr.json  aes-gcm.json  aes.json  chacha20-ietf-poly1305.json  chacha20-ietf.json  chacha20.json  rc4-md5.json  salsa20.json  test.py  test.sh
